# arguss

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Dockerfile  README.md  arguss-day-1-setup.md  backlog.md  fly.toml  pyproject.toml  real-world.txt  test-script.py
.github/: README.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  deploy.yml  secret-scan.yml
arguss/: README.md  api.py  cli.py  logging_config.py  logging_filters.py  logging_helpers.py  settings.py
arguss/core/: README.md  cache.py  models.py  parser.py  sbom.py  serialization.py  top_1000_list.py
arguss/data/: __init__.py  npm_incidents.json  npm_incidents.py
arguss/engine/: README.md  __init__.py  consolidate.py  explanation.py  fix_confidence.py  fix_discovery.py  fix_kind.py  (+5 more)
data/: README.md  npm-top-1000-2026-05.txt  npm-top-1000-2026-06.txt  observatory-seed.json
docs/: README.md  architecture.md  repo-breakdown.md  threat-model.md
scripts/: README.md  bootstrap-github-project-tasks.sh  bootstrap-github-project.sh  refresh-top-1000.py  seed_observatory.py  sync-github-project-roadmap.sh  sync-github-project-tasks.sh
tests/: README.md  conftest.py  test_action_path_observability.py  test_action_runs_migration.py  test_anthropic_ceiling.py  test_api_scheduler.py  test_cache_schema_versioning.py  test_candidate_selection_ui.py  test_chat_identity.py  test_chat_panel.py  test_dashboard_routes.py  test_demo_auth.py  test_epss_client.py  test_epss_integration.py  test_executive_summary.py  test_executive_summary.py.bak  test_explanation.py  test_finding_explain.py  test_fix_confidence.py  test_git_clone_ref.py  test_github_fetch.py  test_github_fetch_integration.py  test_integration_lens.py  test_integration_osv.py  test_ip_rate_limit.py  test_kev_client.py  test_kev_integration.py  test_lens_scores_ui.py  test_logging_helpers.py  test_logging_scrubbing.py  test_no_fix_skips.py  test_npm_incidents.py  test_osv_client.py  test_parser.py  test_pipeline_lens.py  test_propose_fixes.py  test_rate_limit_settings.py  test_ref_validation.py  test_require_auth_settings.py  test_results_context.py  (+21 more)
tools/: write_mode_c_stream.py
(+266 files in other folders)
