[project]
name = "arguss"
version = "0.1.0"
description = "Secure CI/CD & Software Supply Chain Risk Analyzer"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Arguss Team" },
]
dependencies = [
    "fastapi>=0.115.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.39.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "sse-starlette>=2.0.0",
    "rich>=13.9.0",
    "zizmor>=1.25.2",
    "markdown-it-py>=3.0.0",
    "bleach>=6.2.0",
    "apscheduler>=3.11.2",
    "pyjwt[crypto]>=2.13.0",
]

[project.scripts]
arguss = "arguss.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-bleach>=6.2.0",
    "pre-commit>=4.0.0",
    "cyclonedx-bom>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arguss"]

[tool.hatch.build.targets.wheel.force-include]
"arguss/web/templates" = "arguss/web/templates"
"arguss/web/static" = "arguss/web/static"
"arguss/data/npm_incidents.json" = "arguss/data/npm_incidents.json"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["apscheduler.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short -m 'not integration'"
markers = [
    "integration: tests that hit live external APIs (run separately in CI)",
]
